# filature

./: .dockerignore  .env.example  .gitignore  .gitmodules  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  deny.toml  docker-compose.yml  filature.toml
crates/app/: Cargo.toml
crates/app/assets/i18n/: en.json  fr.json
crates/app/assets/static/: app.css  colour-field.js  slot-picker.js
crates/app/assets/templates/: _ams_reconciliation.html  _form_error.html  _location_row.html  _locations_msg.html  _low_stock_threshold_setting.html  _machine_status.html  _manufacturer_row.html  _manufacturers_msg.html  _material_row.html  _printer_loading.html  _settings_locations.html  _settings_manufacturers.html  _settings_printers.html  _spool_card.html  _spool_detail_card.html  _spool_edit_form.html  _spool_row.html  _spool_rows.html  _spool_wizard_condition.html  _spool_wizard_details.html  base.html  dashboard.html  index.html  locations.html  login.html  manufacturers.html  materials.html  printer_form.html  printers.html  settings.html  spools.html  spools_detail.html  spools_edit.html  spools_new.html
crates/app/migrations/: 0001_foundation.sql  0002_materials.sql  0003_spools.sql  0004_locations.sql  0005_manufacturers.sql  0006_add_spool_wizard.sql  0007_instance_configuration.sql  0008_spool_notes_dates.sql  0009_printers.sql  0010_printer_slot_spool.sql  0011_printer_heads_multi_slot.sql  0012_printer_ams_topology.sql  0013_machine_links.sql  0014_bambu_machine_links.sql  0015_ams_tag_uid.sql
crates/app/src/: ams_reconciliation.rs  config.rs  credentials.rs  instance_transfer.rs  lib.rs  machine_bambu.rs  machine_http.rs  main.rs
crates/app/src/persistence/: dashboard.rs  instance_configuration.rs  instance_transfer.rs  locations.rs  machine_links.rs  manufacturers.rs  materials.rs  mod.rs  printers.rs  spools.rs
crates/app/src/web/: auth.rs  dashboard.rs  i18n.rs  locations.rs  manufacturers.rs  materials.rs  mod.rs  printers.rs  router.rs  settings.rs  spools.rs  state.rs  templates.rs  theme.rs
crates/app/tests/: e2e_auth.rs  e2e_locations.rs  e2e_materials.rs  e2e_shell.rs  e2e_spools.rs  it_dashboard.rs  it_instance_configuration.rs  it_instance_transfer.rs  it_locations.rs  it_materials.rs  it_persistence.rs  it_printers.rs  it_spools.rs
crates/app/tests/support/: mod.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
crates/domain/src/dashboard/: mod.rs  model.rs  read_models.rs  stubs.rs  usecases.rs
crates/domain/src/instance_configuration/: mod.rs  model.rs  stubs.rs  usecases.rs
crates/domain/src/instance_transfer/: mod.rs  model.rs  ports.rs  stubs.rs  usecases.rs
crates/domain/src/locations/: mod.rs  model.rs  stubs.rs  usecases.rs
crates/domain/src/machine_connectivity/: mod.rs
crates/domain/src/manufacturers/: mod.rs  model.rs  seed.rs  stubs.rs  usecases.rs
crates/domain/src/materials/: mod.rs  model.rs  seed.rs  stubs.rs  usecases.rs
crates/domain/src/printers/: machine.rs  mod.rs  model.rs  usecases.rs
crates/domain/src/shared/: mod.rs
crates/domain/src/spools/: mod.rs  model.rs  read_models.rs  stubs.rs  usecases.rs
(+138 files in other folders)
