[package]
name = "filature"
version = "0.1.0"
edition.workspace = true

[lib]
name = "filature"
path = "src/lib.rs"

[[bin]]
name = "filature"
path = "src/main.rs"

[dependencies]
domain = { path = "../domain" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["trace"] }
tera = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "migrate"] }
rust-embed = "8"
figment = { version = "0.10", features = ["toml", "env", "test"] }
serde.workspace = true
serde_json.workspace = true
rust_decimal.workspace = true
thiserror.workspace = true
mime_guess = "2"

[dev-dependencies]
tower = "0.5"
