[package]
name = "filature"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[lib]
name = "filature"
path = "src/lib.rs"

[[bin]]
name = "filature"
path = "src/main.rs"

[dependencies]
domain = { path = "../domain" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.7", features = ["trace"] }
tera = "2"
sqlx = { version = "0.9", features = ["runtime-tokio", "postgres", "macros", "migrate"] }
rust-embed = "8"
figment = { version = "0.10", features = ["toml", "env", "test"] }
serde.workspace = true
serde_json.workspace = true
rust_decimal.workspace = true
thiserror.workspace = true
mime_guess = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
ulid = "1"
async-trait = "0.1"

[dev-dependencies]
tower = "0.5"
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["postgres"] }
