[package]
name = "domain"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
thiserror.workspace = true
rust_decimal = { version = "1", default-features = false, features = ["std"] }
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }

[features]
stubs = []
